Aggegation API - work in progress
